    (crrodriguez at opensuse dot org)
  . Fixed bug #53579 (stream_get_contents() segfaults on ziparchive streams).
    (Hannes)
  . Fixed bug #53603 (ZipArchive should quiet stat errors). (brad dot froehle at
    gmail dot com, Gustavo)
  . Fixed bug #53166 (Missing parameters in docs and reflection definition). 
    (Richard)

06 Jan 2011, PHP 5.3.5
- Fixed Bug #53632 (infinite loop with x87 fpu). (CVE-2010-4645) (Scott, 
  Rasmus)

09 Dec 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Security enhancements:
  . Fixed crash in zip extract method (possible CWE-170). 
    (Maksymilian Arciemowicz, Pierre)
  . Paths with NULL in them (foo\0bar.txt) are now considered as invalid. (Rasmus)
  . Fixed a possible double free in imap extension (Identified by Mateusz 
    Kocielski). (CVE-2010-4150). (Ilia)
  . Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
    (CVE-2010-3709). (Maksymilian Arciemowicz)
  . Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
  . Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
  . Fixed symbolic resolution support when the target is a DFS share. (Pierre)
  . Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
    large amount of data) (CVE-2010-3710). (Adam)

- General improvements:
  . Added stat support for zip stream. (Pierre)
  . Added follow_location (enabled by default) option for the http stream 
    support. (Pierre)
  . Improved support for is_link and related functions on Windows. (Pierre)
  . Added a 3rd parameter to get_html_translation_table. It now takes a charset
    hint, like htmlentities et al. (Gustavo)
 
- Implemented feature requests:
  . Implemented FR #52348, added new constant ZEND_MULTIBYTE to detect
    zend multibyte at runtime. (Kalle)
  . Implemented FR #52173, added functions pcntl_get_last_error() and 
     pcntl_strerror(). (nick dot telford at gmail dot com, Arnaud)